--- a/requirements.txt
+++ b/requirements.txt
@@ -2,32 +2,20 @@ google-generativeai
 pdfplumber
 python-pptx
 python-docx
-typing
 torch
 spacy
 numpy
 transformers
 tokenizers
 tqdm
-pytesseract
-keyboard
 Pillow
 langchain
 langchain-google-genai
 python-dotenv
-openai
-googlesearch-python
 ctransformers
 streamlit
 duckduckgo-search
 langchain-community
-youtube-search
-pytube
 yt_dlp
-# Spacy Model
+# Installing the specific spaCy model
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-
-
-
-
-
