--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
-google-generativeai==0.1.0
-pdfplumber==0.9.0
-python-pptx==0.6.21
-python-docx==0.8.11
-torch==2.0.1
-spacy==3.7.1
-numpy==1.23.5
-transformers==4.31.0
-tokenizers==0.13.3
-tqdm==4.65.0
-pytesseract==0.3.10
-Pillow==9.5.0
-langchain==0.0.304
-langchain-google-genai==0.0.2
-python-dotenv==1.0.0
-openai==0.27.8
-googlesearch-python==1.1.0
-ctransformers==0.2.10
-streamlit==1.25.0
-duckduckgo-search==0.8.7
-langchain-community==0.0.3
-yt_dlp==2023.7.6
-
-
-
-
-
+google-generativeai
+pdfplumber
+python-pptx
+python-docx
+typing
+torch
+spacy
+numpy
+transformers
+tokenizers
+tqdm
+pytesseract
+keyboard
+Pillow
+langchain
+langchain-google-genai
+python-dotenv
+openai
+googlesearch-python
+ctransformers   
+streamlit
+duckduckgo-search
+langchain-community
+youtube-search
+pytube
+yt_dlp
+# Installing the specific spaCy model
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
